[Legacy] DetailView Header Title Overlaps fixes

--- a/themes/suite8/css/suitep-base/detailview.scss
+++ b/themes/suite8/css/suitep-base/detailview.scss
@@ -154,8 +154,9 @@ p.msg {
 
   .moduleTitle {
     display: inline-block;
-    text-align:center;
-    width:100%;
+    width: 66%;
+    text-align: left;
+    align-items: flex-end;
   }
 
   .favorite {
@@ -166,6 +167,7 @@ p.msg {
     height: 32px;
     padding: 0 0;
     width: 32px;
+    font-size: 20px;
   }
 
   .nav-tabs > li.tab-inline-pagination {
